[build-system]
requires = [
  "setuptools>=64",
  "requests"
]

build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

# PEP 621 https://peps.python.org/pep-0621/
[project]
name = "grapheefunctions"
version = "0.0.2"
description = "usefull functions to be shared between multiple graphee projects"
authors = [{ name = "vincent DI GIUSTO" }, { email = "vincent.digiust@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.7"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
]

[project.urls]
Homepage = "https://github.com/graphee/py-pkg-shared-functions"
documentation = "https://github.com/graphee/py-pkg-shared-functions"
repository = "https://github.com/graphee/py-pkg-shared-functions"